--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,6 +10,9 @@
                         <h1>Witaj na FilmKRNL</h1>
                         <h3 class="text-body-secondary">Projekt na przedmiot Programowanie aplikacji internetowych w JEE</h3>
                         <h5 class="text-body-secondary">Kornel Szarapajew 93033</h5>
+                        <h5 class="text-body-secondary">
+                            Zalogowanych jest <b th:text="${usersLoggedIn}"></b> użytkowników
+                        </h5>
                     </div>
                 </div>
                 <div class="card mb-2">
