--- a/src/main/resources/templates/settings.html
+++ b/src/main/resources/templates/settings.html
@@ -69,6 +69,12 @@
                     </div>
                 </div>
                 <div class="card">
+                    <b class="card-header">Zmiana hasła</b>
+                    <div class="card-body text-center">
+                        <a type="button" class="btn btn-primary btn-lg mb-2 mb-lg-0" th:href="@{/changePassword}">Zmień hasło</a>
+                    </div>
+                </div>
+                <div class="card mb-2">
                     <b class="card-header">Usuwanie konta</b>
                     <div class="card-body text-center">
                         <form th:action="@{/delete}" method="POST">
